# blog-ui

./: .gitignore  Cargo.toml  LICENSE  MADEWITHLOVE.md  README.md  Trunk.toml  build.rs  index.css  index.html  index.js  index.template.html  manifest.json  trunk_post_build.sh
.github/workflows/: builds.yml  deploy-to-github-pages.yml  deploy_to_github_pages.yml  tests.yml
src/: app.rs  content.rs  generator.rs  hash_map_context.rs  js.rs  keyed_reducible.rs  lib.rs  main.rs  route.rs
src/components/: ai_chat.rs  auth_user_block.rs  author_card.rs  author_image.rs  body.rs  chatgpt_button.rs  comment_card.rs  comments.rs  content.rs  delayed_component.rs  footer.rs  header.rs  information_menu.rs  item.rs  list.rs  load.rs  login_modal.rs  logout_modal.rs  meta.rs  mod.rs  navigation_menu.rs  optional_image.rs  pagination.rs  post_card.rs  post_recommendation.rs  recommended_post.rs  recommended_post_card.rs  search_button.rs  search_field.rs  simple_title_card.rs  subscribe_button.rs  svg_image.rs  telegram_button.rs  warning.rs  yandex_token.rs
src/components/load/: item.rs  list.rs  mod.rs
src/lang/: en.rs  mod.rs  ru.rs
src/pages/: ai_chat.rs  author.rs  author_list.rs  authors.rs  chatgpt.rs  edit_post.rs  hidden_posts.rs  mod.rs  my_unpublished_posts.rs  new_post.rs  page_not_found.rs  post.rs  post_list.rs  posts.rs  search.rs  settings.rs  tag.rs  unpublished_posts.rs  upload_image.rs
src/utils/: app_content_context.rs  app_meta_context.rs  author_image.rs  author_slug_formatter.rs  date.rs  external.rs  get.rs  hash_map_context.rs  head.rs  html_document.rs  image_url_formatter.rs  logged_user_context.rs  map_attr_value.rs  map_in_pattern.rs  mod.rs  not_empty.rs  profile_image.rs  scroll.rs  text.rs  use_load.rs  use_raf_state_eq.rs  use_window_width.rs
