[package]
name = "blog-ui"
version = "0.0.1"
edition = "2021"
license = "MIT"


[dependencies]
blog-generic = { git = "https://github.com/tikitko/blog-server.git", package = "blog-generic" }

log = "0.4"
async-trait = "0.1"

chrono = { version = "0.4", features = ["unstable-locales"] }

yew = { version = "0.21" }
yew-router = { version = "0.18" }
yew-hooks = { version = "0.3", optional = true }

wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-cookies = { version = "0.2", optional = true }
wasm-logger = { version = "0.2", optional = true }

web-sys = { version = "0.3", features = ["HtmlDocument","console","Document","HtmlElement","HtmlTextAreaElement","MouseEvent","DomRect","ScrollToOptions","ScrollBehavior","Element","CssStyleDeclaration","MutationObserver","MutationObserverInit","Node","CustomEvent","HtmlImageElement"], optional = true }

gloo-history = "0.2"
gloo = { version = "0.11", optional = true }
gloo-net = { version = "0.5", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

urlencoding = "2.1"

noneifempty = "0.1"

base64 = "0.21"
uuid = { version = "1.18.0", features = ["std", "v4", "js"], optional = true }


[features]
default = ["client"]
server = ["yew/ssr"]
client = ["yew/csr", "yew-hooks", "wasm-bindgen-futures", "wasm-bindgen", "wasm-cookies", "wasm-logger", "web-sys", "gloo", "gloo-net"]
hydration = ["client", "yew/hydration"]
yandex = []
telegram = []
chatgpt = ["uuid"]


[[bin]]
name = "blog_ui"
required-features = ["client"]


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true
